# accha

./: .gitignore  CMakeLists.txt  a.out  imageProcess.py  main.py  ocr.py  out.tsv  test.cxx
include/: homog2d.hxx
media/: noFlash
ocrConfig/: bazaar  eng.user-patterns  eng.user-words
rawData/: inWords.txt  michiganList.csv  splitList.py
src/: minParallelogram.cpp  minParallelogram.h  ocr.cpp  ocr.h  phyControl.cxx  phyControl.hxx  processImg.cxx  processImg.hxx
